test/types/string/dmk/substring/substringBadRange-codepoint.chpl
var str = "åbçdèfghíjklm";

writeln("str[12:codepointIndex..13:codepointIndex] = ", str[12:codepointIndex..13:codepointIndex]);
writeln("str[12:codepointIndex..16:codepointIndex] = ", str[12:codepointIndex..16:codepointIndex]);
